--- a/css/style.css
+++ b/css/style.css
@@ -552,51 +552,25 @@ a:hover {
   justify-content: center;
   align-items: center;
 }
-#loader {
-  /* Uncomment this to make it run! */
-
-  /*      animation: loader 5s linear infinite;  */
-
-  position: absolute;
-  top: calc(50% - 20px);
-  left: calc(50% - 20px);
-}
-@keyframes loader {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 110%;
-  }
-}
-
-#box {
-  width: 50px;
-  height: 50px;
-  background: #fff;
-  animation: animate 0.5s linear infinite;
-  position: absolute;
+/*------------Loader------------*/
+#loading {
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  border-radius: 3px;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  background-color: black;
+  z-index: 99;
+  text-align: center;
 }
-@keyframes animate {
-  17% {
-    border-bottom-right-radius: 3px;
-  }
-  25% {
-    transform: translateY(9px) rotate(22.5deg);
-  }
-  50% {
-    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
-    border-bottom-right-radius: 40px;
-  }
-  75% {
-    transform: translateY(9px) rotate(67.5deg);
-  }
-  100% {
-    transform: translateY(0) rotate(90deg);
-  }
+
+#loading-image {
+  position: absolute;
+  top: 100px;
+  left: 240px;
+  z-index: 100;
 }
 
 /*------------For mobile phones------------*/
